# claude-distill-me

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: distill.md  import.md  profile.md  queue.md
hooks/: hooks.json
import/: .gitkeep
references/role-templates/: pm.md
scripts/: capture.py  session_end.py
skills/enhanced-self/: SKILL.md
skills/self-distill/: SKILL.md
src/distill_me/: __init__.py  __main__.py  config.py  extractor.py  generator.py  queue.py  scanner.py  server.py
src/plus_me/: __init__.py  __main__.py  config.py  extractor.py  generator.py  queue.py  scanner.py  server.py
